--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Annotation</title>
   <!-- Step 1: Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
   <style>
     /* Full-screen gradient background */
     body {
@@ -129,4 +130,16 @@
     </div>
   </div>
 </body>
+<script>
+  // Load and parse the CSV
+  Papa.parse('data.csv', {
+    download: true,
+    header: true,
+    complete: function(results) {
+      // results.data is an array of objects: { name, question, paragraph }
+      console.log('Parsed CSV:', results.data);
+      // For now, we’re just verifying it loads
+    }
+  });
+</script>
 </html>
