--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Annotation</title>
-  <!-- Step 1: Google Fonts -->
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
   <style>
     /* Full-screen gradient background */
     body {
@@ -129,44 +128,64 @@
       <button class="btn-none">Not Relevant</button>
     </div>
   </div>
-</body>
-<script>
-  Papa.parse('data.csv', {
-    download: true,
-    header: true,
-    complete: function(results) {
-      const rows = results.data; 
-      // 1) Ask for the annotator's name
-      const user = prompt('Please enter your name:');
-      // 2) Filter to this user's assignments
-      const tasks = rows.filter(r => r.name.trim() === user.trim());
-      if (tasks.length === 0) {
-        alert(`No tasks found for “${user}”.`);
-        return;
-      }
-      
-      let idx = 0;
-      // 3) Function to render question & paragraph
-      function showTask(i) {
-        document.getElementById('question').textContent = tasks[i].question;
-        document.getElementById('paragraph').textContent = tasks[i].paragraph;
-      }
-      showTask(idx);
-      
-      // 4) Hook up the buttons
-      document.querySelectorAll('.buttons button').forEach(btn => {
-        btn.addEventListener('click', () => {
-          const label = btn.textContent;
-          console.log({ user, question: tasks[idx].question, label });
-          idx++;
-          if (idx < tasks.length) {
-            showTask(idx);
-          } else {
-            alert('All done! Thanks for annotating.');
-          }
+
+  <!-- PapaParse -->
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
+  <script>
+    Papa.parse('data.csv', {
+      download: true,
+      header: true,
+      complete: function(results) {
+        const rows = results.data;
+        const user = prompt('Please enter your name:');
+        const tasks = rows.filter(r => r.name.trim() === user.trim());
+        if (tasks.length === 0) {
+          alert(`No tasks found for “${user}”.`);
+          return;
+        }
+        let idx = 0;
+        const annotations = [];
+        function showTask(i) {
+          document.getElementById('question').textContent = tasks[i].question;
+          document.getElementById('paragraph').textContent = tasks[i].paragraph;
+        }
+        showTask(idx);
+        document.querySelectorAll('.buttons button').forEach(btn => {
+          btn.addEventListener('click', () => {
+            const label = btn.textContent;
+            const task = tasks[idx];
+            annotations.push({
+              name: user,
+              question: task.question,
+              paragraph: task.paragraph,
+              label: label,
+              timestamp: new Date().toISOString()
+            });
+            idx++;
+            if (idx < tasks.length) {
+              showTask(idx);
+            } else {
+              alert('All done! Downloading your annotations.');
+              // Build CSV
+              const header = ['name','question','paragraph','label','timestamp'];
+              const rowsCSV = annotations.map(a => header.map(h =>
+                `"${(a[h]||'').replace(/"/g,'""')}"`
+              ).join(','));
+              const csvContent = [header.join(','), ...rowsCSV].join('\n');
+              const blob = new Blob([csvContent], {type: 'text/csv'});
+              const url = URL.createObjectURL(blob);
+              const a = document.createElement('a');
+              a.href = url;
+              a.download = `annotations_${user}_${Date.now()}.csv`;
+              document.body.appendChild(a);
+              a.click();
+              document.body.removeChild(a);
+              URL.revokeObjectURL(url);
+            }
+          });
         });
-      });
-    }
-  });
-</script>
+      }
+    });
+  </script>
+</body>
 </html>
