--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url=new_index.html">
+    <title>Redirecting…</title>
+  </head>
+  <body>
+    Redirecting to <a href="new_index.html">new_index.html</a>…
+  </body>
+</html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
